--- a/index.html
+++ b/index.html
@@ -1525,7 +1525,7 @@
 
       </div>
     </div>
-  -->
+    -->
     <div id="launchModal" class="modal">
       <div class="modal-contents">
         <svg id="launchTitle" version="1.1" x="0px" y="0px" viewBox="0 0 226 70">
@@ -1549,7 +1549,11 @@
             c0-0.2,0.1-0.5,0.3-0.9l12.4-22.3L178.5,9.2c-0.2-0.4-0.3-0.7-0.3-1c0-1.3,0.6-1.9,1.9-1.9h13.2c0.8,0,1.4,0.3,1.7,1l4.4,8.1
             l4.5-8.1c0.4-0.7,0.9-1,1.6-1H219C220.3,6.4,220.9,7,220.9,8.3z"/>
         </svg>
-        <button onclick="launchGame()">Play</button>
+        <div class="launch-modal-buttons">
+          <button onclick="launchGame()">Play</button>
+          <a class="tutorial-button" href="https://www.youtube.com/watch?v=ZAspNiPAUEE" target=”_blank”>Tutorial Video</a>
+          <a class="instructions-button" href="https://www.ultraboardgames.com/qwixx/game-rules.php" target=”_blank”>Instructions</a>
+        </div>
       </div>
     </div>
     <div class="rotate-device-container">
